# early-abstention-in-llm-cascades

./: README.md  compute_results_grids.ipynb  early_abs_experiment_script.py  early_abs_setup.py  evaluate_outliers.ipynb  generate_pr_plots.ipynb  generate_tables.ipynb  precision_recall_script.py  requirements.txt  utils.py
legacy_dependencies/hcma/: .env  README.md  pyproject.toml
legacy_dependencies/hcma/hcma/probabilistic_modeling/: confidence_model.py  copula.py  multithreshold_optimization.py  tests.py
optimal_thresholds_data/gsm8k/: optimal_tholds_llama_chain_01.pkl  optimal_tholds_llama_chain_02.pkl  optimal_tholds_llama_chain_03.pkl  optimal_tholds_llama_chain_04.pkl  optimal_tholds_llama_chain_12.pkl  optimal_tholds_llama_chain_13.pkl  optimal_tholds_llama_chain_14.pkl  optimal_tholds_llama_chain_23.pkl  optimal_tholds_llama_chain_24.pkl  optimal_tholds_llama_chain_34.pkl  optimal_tholds_qwen_oai_chain_01.pkl  optimal_tholds_qwen_oai_chain_02.pkl  optimal_tholds_qwen_oai_chain_03.pkl  optimal_tholds_qwen_oai_chain_12.pkl  optimal_tholds_qwen_oai_chain_13.pkl  optimal_tholds_qwen_oai_chain_23.pkl  prob_model_results_llama_chain.pkl  prob_model_results_qwen_oai_chain.pkl
optimal_thresholds_data/medmcqa/: optimal_tholds_llama_chain_01.pkl  optimal_tholds_llama_chain_02.pkl  (+16 more)
performance_data/: outlier_stats_outlier=10.pkl  overall_results_joint_abstention_outlier=10.pkl  overall_results_joint_cost_outlier=10.pkl  overall_results_joint_error_outlier=10.pkl  overall_results_joint_loss_outlier=10.pkl
precision_recall_data/: pr-data.pkl
(+72 files in other folders)
